--- a/app01/app01.html
+++ b/app01/app01.html
@@ -9,6 +9,11 @@
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button class="add">Click Me</button>
+  <input type="button" value="no ME"/>
+  <button id="minus">REDO</button>
+
   <p>You've pressed the button {{counter}} times.</p>
+  <p>TWO TIMES = {{doubleNumber}}</p>
+  <p>Crazy things = {{dN doubleNumber counter}}</p>
 </template>
