tinkering 8/6. still failing async twitter calls and passing the result to UI

--- a/app01/app01.html
+++ b/app01/app01.html
@@ -1,6 +1,6 @@
 <head>
-  <title>app01</title>
-
+  <title>Meteor Playground!</title>
+  <meta >
 </head>
 
 <body class="text-center">
@@ -27,6 +27,6 @@
 	  <p>5 things = {{tN counter}}</p>
 	</div>
 </div>
-
+twit... 
 {{twitterUrl}}
 </template>
