back in wifi-land. adding failed learning experiments from this past week

--- a/app01/app01.html
+++ b/app01/app01.html
@@ -14,7 +14,7 @@
   <input type="button" value="no ME"/>
   <button id="minus">REDO</button>
   <button id="twitter">Twitter?</button>
-
+  <input id='usn' type='text' placeholder='twitter user'/>
   <div class="col-md-12">
   	<div class="col-md-6">
 	  <p>You've pressed the button {{counter}} times.</p>
@@ -28,5 +28,6 @@
 	</div>
 </div>
 twit... 
-{{twitterUrl}}
+<img src={{twitterUrl}} alt='failing at blaze src'/>
+<img src={{testerUrl}} alt='failing global variables'/>
 </template>
